<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:title="@string/vehicles"
        >
        <menu>
            <item
                android:title=""
                app:actionLayout="@layout/carsharing_service_switch_header"
            />
            <item
                android:id="@+id/greengo_switch"
                android:title="@string/greengo"
                app:actionLayout="@layout/carsharing_service_switch"
            />
            <item
                android:id="@+id/mollimo_switch"
                android:title="@string/mollimo"
                app:actionLayout="@layout/carsharing_service_switch"
            />
            <item
                android:id="@+id/blinkee_swicth"
                android:title="@string/blinkee"
                app:actionLayout="@layout/carsharing_service_switch"
            />
            <item
                android:id="@+id/ogreco_swicth"
                android:title="@string/ogreco"
                app:actionLayout="@layout/carsharing_service_switch"
            />
        </menu>
    </item>
</menu>
